--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-
-  <title>Frontend Mentor | Space tourism website</title>
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,21 +12,35 @@
       rel="stylesheet">
 
   <link rel="stylesheet" href="index.css">
+  <title>Frontend Mentor | Space tourism website</title>
 </head>
-<body>
+<body class="home">
+  <!-- navigation -->
+  <header class="flex primary-header">
+      <div>
+        <img src="./assets/shared/logo.svg" alt="space tourism logo">
+      </div>
+      <nav>
+          <ul class="primary-navigation underline-indicators flex">
+              <li class="active"><a class="ff-sans-cond uppercase txt-white letter-spacing-3" href="index.html"><span>00</span>Home</a>
+              <li><a class="ff-sans-cond uppercase txt-white letter-spacing-3" href="destination.html"><span>01</span>Destination</a>
+              <li><a class="ff-sans-cond uppercase txt-white letter-spacing-3" href="crew.html"><span>02</span>Crew</a>
+              <li><a class="ff-sans-cond uppercase txt-white letter-spacing-3" href="technology.html"><span>03</span>Technology</a>
+          </ul>
+      </nav>
+  </header>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
-
-  So, you want to travel to
-  Space
-  Let’s face it; if you want to go to space, you might as well genuinely go to
-  outer space and not hover kind of on the edge of it. Well sit back, and relax
-  because we’ll give you a truly out of this world experience!
-
-  Explore
-
+  <section class="grid-container" id="home">
+    <div>
+      <h1 class="uppercase ff-sans-cond fs-500 letter-spacing-1 txt-light">So, you want to travel to
+      <span class="uppercase ff-serif fs-900 txt-white d-block" style="letter-spacing: 0">Space</span></h1>
+      <p class="txt-light">Let’s face it; if you want to go to space, you might as well genuinely go to
+      outer space and not hover kind of on the edge of it. Well sit back, and relax
+      because we’ll give you a truly out of this world experience!</p>
+    </div>
+    <div>
+      <a href="#" class="large-button uppercase ff-serif txt-dark bg-white">Explore</a>
+    </div>
+  </section>
 </body>
 </html>
