--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <link rel="stylesheet" href="index.css">
   <title>Frontend Mentor | Space tourism website</title>
+  <script type="text/javascript" src="index.js" defer></script>
 </head>
 <body class="home">
   <!-- navigation -->
@@ -22,7 +23,7 @@
       </div>
       <button class="mobile-nav-toggle" aria-controls="primary-navigation"><span class="sr-only" aria-expanded="false">Menu</span></button>
       <nav>
-          <ul id="primary-navigation" class="primary-navigation underline-indicators flex">
+          <ul id="primary-navigation" data-visible="false" class="primary-navigation underline-indicators flex">
               <li class="active"><a class="ff-sans-cond uppercase txt-white letter-spacing-3" href="index.html"><span>00</span>Home</a>
               <li><a class="ff-sans-cond uppercase txt-white letter-spacing-3" href="destination.html"><span>01</span>Destination</a>
               <li><a class="ff-sans-cond uppercase txt-white letter-spacing-3" href="crew.html"><span>02</span>Crew</a>
