--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
   <!-- navigation -->
   <header class="flex primary-header">
       <div>
-        <img src="./assets/shared/logo.svg" alt="space tourism logo">
+        <img src="./assets/shared/logo.svg" alt="space tourism logo" class="logo">
       </div>
       <button class="mobile-nav-toggle" aria-controls="primary-navigation"><span class="sr-only" aria-expanded="false">Menu</span></button>
       <nav>
           <ul id="primary-navigation" data-visible="false" class="primary-navigation underline-indicators flex">
-              <li class="active"><a class="ff-sans-cond uppercase txt-white letter-spacing-3" href="index.html"><span>00</span>Home</a>
-              <li><a class="ff-sans-cond uppercase txt-white letter-spacing-3" href="destination.html"><span>01</span>Destination</a>
-              <li><a class="ff-sans-cond uppercase txt-white letter-spacing-3" href="crew.html"><span>02</span>Crew</a>
-              <li><a class="ff-sans-cond uppercase txt-white letter-spacing-3" href="technology.html"><span>03</span>Technology</a>
+              <li class="active"><a class="ff-sans-cond uppercase txt-white letter-spacing-3" href="index.html"><span class="md-hidden">00</span>Home</a>
+              <li><a class="ff-sans-cond uppercase txt-white letter-spacing-3" href="destination.html"><span class="md-hidden">01</span>Destination</a>
+              <li><a class="ff-sans-cond uppercase txt-white letter-spacing-3" href="crew.html"><span class="md-hidden">02</span>Crew</a>
+              <li><a class="ff-sans-cond uppercase txt-white letter-spacing-3" href="technology.html"><span class="md-hidden">03</span>Technology</a>
           </ul>
       </nav>
   </header>
