add large screen layout

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </nav>
   </header>
 
-  <main class="grid-container" id="home">
+  <main class="grid-container grid-container--home" id="home">
     <div>
       <h1 class="uppercase ff-sans-cond fs-500 letter-spacing-1 txt-light">So, you want to travel to
       <span class="uppercase ff-serif fs-900 txt-white d-block" style="letter-spacing: 0">Space</span></h1>
