--- a/crew.html
+++ b/crew.html
@@ -43,15 +43,16 @@
         <button aria-selected="false" class="btn-circle"><span class="sr-only">Flight Engineer</span></button>
     </div>
 
-    <article class="crew-info">
-      <h2 class="fs-600 ff-serif uppercase txt-light" style="margin-bottom:0.5rem">Commander</h2>
-      <h3 class="fs-700 ff-serif uppercase" style="margin-bottom:1rem;">Douglas Hurley</h3>
-
+    <article class="crew-info flow">
+      <header class="flow flow-space--sm">
+        <h2 class="fs-600 ff-serif uppercase txt-white">Commander</h2>
+        <p class="fs-700 ff-serif uppercase">Douglas Hurley</p>
+      </header>
       <p class="txt-light">Douglas Gerald Hurley is an American engineer, former Marine Corps pilot
       and former NASA astronaut. He launched into space for the third time as
       commander of Crew Dragon Demo-2.</p>
     </article>
-    
+
     <img class="crew-img" src="./assets/crew/image-douglas-hurley.png" alt="the crew commander">
   </main>
 </body>
