--- a/destination.html
+++ b/destination.html
@@ -45,7 +45,7 @@
         <button aria-selected="false" class="uppercase fs-200 ff-sans-cond txt-light bg-transparent letter-spacing-2">Titan</button>
     </div>
 
-    <article class="destination-info">
+    <article class="destination-info flow">
       <h2 class="fs-800 ff-serif uppercase">Moon</h2>
 
       <p class="txt-light"> See our planet as you’ve never seen it before. A perfect relaxing trip away to help
