--- a/crew.html
+++ b/crew.html
@@ -52,8 +52,10 @@
       and former NASA astronaut. He launched into space for the third time as
       commander of Crew Dragon Demo-2.</p>
     </article>
-
-    <img class="crew-img" src="./assets/crew/image-douglas-hurley.png" alt="the crew commander">
+    <picture>
+      <source srcset="assets/crew/image-douglas-hurley.webp" type="image/webp">
+      <img class="crew-img" src="assets/crew/image-douglas-hurley.png" alt="the crew commander">
+    </picture>
   </main>
 </body>
 </html>
