--- a/destination.html
+++ b/destination.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="index.css">
   <title>Frontend Mentor | Space tourism website</title>
   <script type="text/javascript" src="index.js" defer></script>
+  <script type="text/javascript" src="tabs.js" defer></script>
 </head>
 <body class="destination">
   <a class="skip-to-content" href="#home">Skip to content</a>
@@ -35,18 +36,32 @@
 
   <main class="grid-container grid-container--destination flow" id="main">
     <h1 class="numbered-title"><span aria-hidden="true">01</span> Pick your destination</h1>
-    <picture>
+
+    <picture id="moon-img">
       <source srcset="assets/destination/image-moon.webp" type="image/webp">
       <img src="./assets/destination/image-moon.png" alt="the moon">
     </picture>
-    <div class="tab-list underline-indicators flex">
-        <button aria-selected="true" class="uppercase fs-200 ff-sans-cond txt-light bg-transparent letter-spacing-2">Moon</button>
-        <button aria-selected="false" class="uppercase fs-200 ff-sans-cond txt-light bg-transparent letter-spacing-2">Mars</button>
-        <button aria-selected="false" class="uppercase fs-200 ff-sans-cond txt-light bg-transparent letter-spacing-2">Europa</button>
-        <button aria-selected="false" class="uppercase fs-200 ff-sans-cond txt-light bg-transparent letter-spacing-2">Titan</button>
-    </div>
+    <picture id="mars-img" hidden>
+      <source srcset="assets/destination/image-mars.webp" type="image/webp">
+      <img src="./assets/destination/image-mars.png" alt="the planet mars">
+    </picture>
+    <picture id="europa-img" hidden>
+      <source srcset="assets/destination/image-europa.webp" type="image/webp">
+      <img src="./assets/destination/image-europa.png" alt="the planet europa">
+    </picture>
+    <picture id="titan-img" hidden>
+      <source srcset="assets/destination/image-titan.webp" type="image/webp">
+      <img src="./assets/destination/image-titan.png" alt="the planet titan">
+    </picture>
 
-    <article class="destination-info flow">
+    <div class="tab-list underline-indicators flex" role="tablist" aria-label="destination list">
+        <button aria-selected="true" role="tab" aria-controls="moon-tab" class="uppercase fs-200 ff-sans-cond txt-light bg-transparent letter-spacing-2" tabindex="0">Moon</button>
+        <button aria-selected="false" role="tab" aria-controls="mars-tab" class="uppercase fs-200 ff-sans-cond txt-light bg-transparent letter-spacing-2" tabindex="-1">Mars</button>
+        <button aria-selected="false" role="tab" aria-controls="europa-tab" class="uppercase fs-200 ff-sans-cond txt-light bg-transparent letter-spacing-2" tabindex="-1">Europa</button>
+        <button aria-selected="false" role="tab" aria-controls="titan-tab" class="uppercase fs-200 ff-sans-cond txt-light bg-transparent letter-spacing-2" tabindex="-1">Titan</button>
+    </div>
+    <!-- moon article -->
+    <article class="destination-info flow" id="moon">
       <h2 class="fs-800 ff-serif uppercase">Moon</h2>
 
       <p class="txt-light"> See our planet as you’ve never seen it before. A perfect relaxing trip away to help
@@ -63,6 +78,59 @@
         </div>
       </div>
     </article>
+    <!-- mars article -->
+    <article class="destination-info flow" id="mars" hidden>
+      <h2 class="fs-800 ff-serif uppercase">Mars</h2>
+
+      <p class="txt-light"> Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons, the
+      tallest planetary mountain in our solar system. It’s two and a half times the size of Everest! </p>
+      <div class="destination-meta flex">
+        <div>
+          <h3 class="fs-200 uppercase ff-sans-cond letter-spacing-3 txt-light">Avg. distance</h3>
+          <p class="fs-500 ff-serif uppercase">225 mil. km</p>
+        </div>
+        <div>
+          <h3 class="fs-200 uppercase ff-sans-cond letter-spacing-3 txt-light">Est. travel time</h3>
+          <p class="fs-500 ff-serif uppercase">9 months</p>
+        </div>
+      </div>
+    </article>
+    <!-- europa article -->
+    <article class="destination-info flow" id="europa" hidden>
+      <h2 class="fs-800 ff-serif uppercase">Europa</h2>
+
+      <p class="txt-light">The smallest of the four Galilean moons orbiting Jupiter, Europa is a winter lover’s dream.
+      With an icy surface, it’s perfect for a bit of ice skating, curling, hockey, or simple relaxation in your
+      snug wintery cabin. </p>
+      <div class="destination-meta flex">
+        <div>
+          <h3 class="fs-200 uppercase ff-sans-cond letter-spacing-3 txt-light">Avg. distance</h3>
+          <p class="fs-500 ff-serif uppercase">628 mil. km</p>
+        </div>
+        <div>
+          <h3 class="fs-200 uppercase ff-sans-cond letter-spacing-3 txt-light">Est. travel time</h3>
+          <p class="fs-500 ff-serif uppercase">3 years</p>
+        </div>
+      </div>
+    </article>
+    <!-- titan article -->
+    <article class="destination-info flow" id="titan" hidden>
+      <h2 class="fs-800 ff-serif uppercase">Titan</h2>
+
+      <p class="txt-light">The only moon known to have a dense atmosphere other than Earth, Titan is a home away from
+      home (just a few hundred degrees colder!). As a bonus, you get striking views of the Rings of Saturn. </p>
+      <div class="destination-meta flex">
+        <div>
+          <h3 class="fs-200 uppercase ff-sans-cond letter-spacing-3 txt-light">Avg. distance</h3>
+          <p class="fs-500 ff-serif uppercase">1.6 bil. km</p>
+        </div>
+        <div>
+          <h3 class="fs-200 uppercase ff-sans-cond letter-spacing-3 txt-light">Est. travel time</h3>
+          <p class="fs-500 ff-serif uppercase">7 years</p>
+        </div>
+      </div>
+    </article>
+
   </main>
 </body>
 </html>
