--- a/destination.html
+++ b/destination.html
@@ -55,10 +55,10 @@
     </picture>
 
     <div class="tab-list underline-indicators flex" role="tablist" aria-label="destination list">
-        <button aria-selected="true" role="tab" aria-controls="moon-tab" class="uppercase fs-200 ff-sans-cond txt-light bg-transparent letter-spacing-2" tabindex="0">Moon</button>
-        <button aria-selected="false" role="tab" aria-controls="mars-tab" class="uppercase fs-200 ff-sans-cond txt-light bg-transparent letter-spacing-2" tabindex="-1">Mars</button>
-        <button aria-selected="false" role="tab" aria-controls="europa-tab" class="uppercase fs-200 ff-sans-cond txt-light bg-transparent letter-spacing-2" tabindex="-1">Europa</button>
-        <button aria-selected="false" role="tab" aria-controls="titan-tab" class="uppercase fs-200 ff-sans-cond txt-light bg-transparent letter-spacing-2" tabindex="-1">Titan</button>
+        <button aria-selected="true" role="tab" aria-controls="moon" class="uppercase fs-200 ff-sans-cond txt-light bg-transparent letter-spacing-2" tabindex="0">Moon</button>
+        <button aria-selected="false" role="tab" aria-controls="mars" class="uppercase fs-200 ff-sans-cond txt-light bg-transparent letter-spacing-2" tabindex="-1">Mars</button>
+        <button aria-selected="false" role="tab" aria-controls="europa" class="uppercase fs-200 ff-sans-cond txt-light bg-transparent letter-spacing-2" tabindex="-1">Europa</button>
+        <button aria-selected="false" role="tab" aria-controls="titan" class="uppercase fs-200 ff-sans-cond txt-light bg-transparent letter-spacing-2" tabindex="-1">Titan</button>
     </div>
     <!-- moon article -->
     <article class="destination-info flow" id="moon">
