--- a/crew.html
+++ b/crew.html
@@ -37,7 +37,7 @@
   <main class="grid-container grid-container--crew flow" id="crew">
     <h1 class="numbered-title"><span aria-hidden="true">02</span> Meet your crew</h1>
 
-    <div class="dot-indicators flex" role="tablist">
+    <div class="dot-indicators flex" role="tablist" aria-label="crew member list">
         <button aria-selected="true" role="tab" aria-controls="commander" class="btn-circle" tabindex="0"><span class="sr-only">Commander</span></button>
         <button aria-selected="false" role="tab" aria-controls="specialist" class="btn-circle" tabindex="-1"><span class="sr-only">Mission specialist</span></button>
         <button aria-selected="false" role="tab" aria-controls="pilot" class="btn-circle" tabindex="-1"><span class="sr-only">Pilot</span></button>
