--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       because we’ll give you a truly out of this world experience!</p>
     </div>
     <div>
-      <a href="#" class="large-button uppercase ff-serif txt-dark bg-white">Explore</a>
+      <a href="destination.html" class="large-button uppercase ff-serif txt-dark bg-white">Explore</a>
     </div>
   </main>
 
